# markbase

./: AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Justfile  README.md  README.zh-CN.md  build.rs  core-beliefs.md  opencode.json  plan.md  properties_migration_plan.md  todo.txt
.cargo/: config.toml
.github/workflows/: release.yml
docs/: DESIGN.md  DOCUMENTATION.md  PLANS.md  core-beliefs.md
docs/design-docs/: design-001-links-and-embeds.md  design-002-render.md  design-003-web-note-view.md  design-004-note-verify.md  design-005-indexing.md  design-006-template-system.md  design-007-template-instance-metadata-patch.md  design-008-note-resolve.md
docs/guidelines/: core-beliefs.md
docs/references/: README.md
plans/: note_render_implementation_plan.md  note_verify_implementation_plan.md  refactor-plan.md
plans/completed/: description_implementation_plan.md  note_render_implementation_plan.md  note_verify_implementation_plan.md  refactor-plan.md
sample-notes/: obsidian-guide.md  troubleshooting.md
sample-notes/projects/: mobile-app.md
sample-notes/templates/: company_customer.md  person_work.md
skills/markbase/: SKILL.md
spec/: SKILL.md  aci.md  description_design.md  index_incremental_design.md  links_design.md  note_render_design.md  note_verify_design.md  properties_design.md  query_design.md  schema.md  template_schema.md
specs/: org.md  project.md
specs/active/: task-001-build-link-parser.spec  task-0012-note-resolve-partial-name-matching.md  task-0014-fix-quote-container-preservation.md  task-0015-add-canonical-web-routing.md  task-0016-add-web-render-mode.md  task-0017-add-web-interface-and-normalization.md  task-0018-web-init-docsify.md  task-0019-web-note-metadata-mode.md  (+15 more)
src/: attachment.rs  constants.rs  creator.rs  db.rs  describe.rs  extractor.rs  lib.rs  link_syntax.rs  main.rs  name_validator.rs  output.rs  renamer.rs  resolver.rs  scanner.rs  template.rs  verifier.rs  watcher.rs
src/query/: mod.rs  (+7 more)
tests/: cli_attachment.rs  cli_docsify.rs  cli_incremental.rs  cli_index.rs  cli_note.rs  cli_query.rs  cli_web.rs  common.rs  e2e_complete.rs
(+108 files in other folders)
