[package]
name = "markbase"
description = "A high-performance CLI tool for indexing and querying Markdown files for AI agent. Obsidian-compatible."
repository = "https://github.com/flyisland/markbase"
version = "0.1.1-dev"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
duckdb = { version = "1.4", features = ["bundled", "chrono"] }
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
gray_matter = "0.3"
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
chrono = "0.4"
ignore = "0.4.25"

[build-dependencies]
chrono = "0.4"

[profile.release]
opt-level = 2
strip = true
