[package]
name = "markbase"
description = "A high-performance CLI tool for indexing and querying Markdown files for AI agent. Obsidian-compatible."
repository = "https://github.com/flyisland/markbase"
version = "0.9.6"
edition = "2024"
license = "MIT"

[features]
default = ["bundled"]
bundled = ["duckdb/extensions-full"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
duckdb = { version = "1.4", features = ["chrono"] }
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
gray_matter = "0.3"
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
chrono = "0.4"
ignore = "0.4.25"

[dev-dependencies]
tempfile = "3.10"
regex = "1.10"

[build-dependencies]
chrono = "0.4"

[profile.release]
opt-level = 2
strip = true
